# src/controllers/userController.ts
@@ -1,5 +1,6 @@
 import { NextFunction, Request, Response } from 'express'
 import User from '../models/User'
+import News from '../models/News'
 import bcrypt from 'bcryptjs'
 import validator from 'validator'
 import { catchAsync } from '../utils/catchAsync'
@@ -83,4 +84,67 @@ const getUserInfo = catchAsync(async (req: Request, res: Response, next: NextFun
   })
 })
 
-export { getUser, updatePassword, getUserInfo }
+// 取得會員文章收藏列表
+const getUserCollectList = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
+  const userId = req.user?._id
+  const query = req.query
+  const articlesPerPage = 6
+
+  const pageIndex = query.pageIndex !== undefined && query.pageIndex !== ''
+    ? parseInt(query.pageIndex as string)
+    : 1
+
+  const [totalElements, articles] = await Promise.all([
+    News.countDocuments({
+      collects: { $in: [userId] }
+    }),
+    News.find({
+      collects: { $in: [userId] }
+    })
+      .select('-_id -content -collects')
+      .sort({ publishedAt: -1 })
+      .skip((pageIndex - 1) * articlesPerPage)
+      .limit(articlesPerPage)
+  ])
+
+  const firstPage = pageIndex === 1
+  const lastPage = totalElements <= pageIndex * articlesPerPage
+  const empty = totalElements === 0
+  const totalPages = Math.ceil(totalElements / articlesPerPage)
+  let data = {
+    articles,
+    firstPage,
+    lastPage,
+    empty,
+    totalElements,
+    totalPages,
+    targetPage: pageIndex
+  }
+  appSuccess({ res, data, message: '取得文章列表成功' })
+})
+
+// 新增會員收藏文章
+const addArticleCollect = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
+  const userId = req.user?._id
+  const { articleId } = req.params
+
+  await News.findOneAndUpdate({ articleId }, {
+    $addToSet: { collects: userId }
+  }, { runValidators: true })
+
+  appSuccess({ res, message: '收藏文章成功' })
+})
+
+// 取消會員收藏文章
+const deleteArticleCollect = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
+  const userId = req.user?._id
+  const { articleId } = req.params
+
+  await News.findOneAndUpdate({ articleId }, {
+    $pull: { collects: userId }
+  }, { runValidators: true }).exec()
+
+  appSuccess({ res, message: '取消收藏文章成功' })
+})
+
+export { getUser, updatePassword, getUserInfo, getUserCollectList, addArticleCollect, deleteArticleCollect }
