# src/routes/userRouter.ts
@@ -2,7 +2,10 @@ import express from 'express'
 import {
   getUser,
   getUserInfo,
-  updatePassword
+  updatePassword,
+  getUserCollectList,
+  addArticleCollect,
+  deleteArticleCollect
 } from '../controllers/userController'
 import { authenticate } from '../middleware/authMiddleware'
 
@@ -79,5 +82,62 @@ router.get(
      */
   getUserInfo
 )
+
+router.get('/collect-page',
+/*
+  #swagger.tags = ['User - 登入使用者']
+  #swagger.description = '取得收藏列表'
+  #swagger.security = [{'api_key': ['apiKeyAuth']}]
+  #swagger.parameters['pageIndex'] = {
+    in: 'query',
+    type: 'String',
+    description: '當前頁數',
+  },
+  #swagger.responses[200] = {
+    description: '收藏列表資訊',
+    schema: { $ref: '#/definitions/articleList' }
+  }
+  */
+  getUserCollectList)
+router.post('/collect-article/:articleId',
+  /*
+    #swagger.tags = ['User - 登入使用者']
+    #swagger.description = '新增收藏文章'
+    #swagger.security = [{'api_key': ['apiKeyAuth']}]
+    #swagger.parameters['articleId'] = {
+      in: 'path',
+      description: '文章ID',
+      required: true,
+      type: 'string'
+    }
+    #swagger.responses[200] = {
+      description: '收藏文章資訊',
+      schema: {
+        status: true,
+        message: '收藏文章成功'
+      }
+    }
+  */
+  addArticleCollect)
+router.delete('/collect-article/:articleId',
+  /*
+    #swagger.tags = ['User - 登入使用者']
+    #swagger.description = '取消收藏文章'
+    #swagger.security = [{'api_key': ['apiKeyAuth']}]
+    #swagger.parameters['articleId'] = {
+      in: 'path',
+      description: '文章ID',
+      required: true,
+      type: 'string'
+    }
+    #swagger.responses[200] = {
+      description: '收藏文章資訊',
+      schema: {
+        status: true,
+        message: '取消收藏文章成功'
+      }
+    }
+  */
+  deleteArticleCollect)
 
 export default router
